<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/pokertableImageView"
        android:layout_width="414dp"
        android:layout_height="735dp"
        android:contentDescription="@string/poker_table1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/poker_table" />

    <ImageView
        android:id="@+id/cardBackImageView"
        style=""
        android:layout_width="210dp"
        android:layout_height="300dp"
        android:layout_marginTop="125dp"
        android:background="@drawable/rounded_shape"
        android:contentDescription="@string/card_back"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/card_back" />

    <ToggleButton
        android:id="@+id/soundButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="25dp"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/lowerButton"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:text="@string/lower"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardBackImageView" />

    <Button
        android:id="@+id/higherButton"
        android:layout_width="125dp"
        android:layout_height="65dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/higher"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardBackImageView" />

    <TextView
        android:id="@+id/scoreTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/score"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardBackImageView" />

    <Button
        android:id="@+id/turnButton"
        android:layout_width="120dp"
        android:layout_height="60dp"
        android:text="@string/turn_card"
        app:layout_constraintBottom_toTopOf="@+id/cardBackImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.558" />

</androidx.constraintlayout.widget.ConstraintLayout>