<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/backImageView"
        android:layout_width="415dp"
        android:layout_height="734dp"
        android:contentDescription="@string/pokertable"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.666"
        app:srcCompat="@drawable/poker_table"
        tools:ignore="ImageContrastCheck,ImageContrastCheck" />

    <Button
        android:id="@+id/playButton"
        android:layout_width="200dp"
        android:layout_height="100dp"
        android:layout_marginTop="120dp"
        android:backgroundTint="#E03712"
        android:text="@string/play"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameImageView"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/gameImageView"
        android:layout_width="277dp"
        android:layout_height="252dp"
        android:layout_marginTop="116dp"
        android:contentDescription="@string/game_image"
        android:scaleType="fitCenter"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backImageView"
        app:srcCompat="@drawable/game_image" />


</androidx.constraintlayout.widget.ConstraintLayout>